# Surge_Drone

./: .gitignore  README.md  setup.sh
CAD/: DesignDescription.json  Manifest.json  f3f2a805-027a-4fcd-9f26-587cf4392b15.zip.f3d
ROS_2/: README.md  source_env.sh
ROS_2/config/: cyclonedds.xml
ROS_2/src/drone_bringup/: CMakeLists.txt  package.xml
ROS_2/src/drone_bringup/launch/: slam_sim.launch.py
ROS_2/src/drone_control/: package.xml  setup.py
ROS_2/src/drone_control/drone_control/: coverage_path.py  mapping_sweep.py  offboard_keyboard.py
ROS_2/src/drone_control/launch/: mavros.launch.py
ROS_2/src/drone_description/: CMakeLists.txt  package.xml
ROS_2/src/drone_description/launch/: description.launch.py
ROS_2/src/drone_description/rviz/: slam.rviz
ROS_2/src/drone_description/urdf/: drone.urdf.xacro
ROS_2/src/drone_sim/: CMakeLists.txt  package.xml
ROS_2/src/drone_sim/launch/: px4_sim.launch.py
ROS_2/src/drone_sim/models/s500_depth/: model.config  s500_depth.sdf
ROS_2/src/drone_sim/px4/: install_px4_assets.sh
ROS_2/src/drone_sim/px4/airframes/: 1020_gazebo-classic_s500_depth
ROS_2/src/drone_sim/worlds/: slam_world.world  town_world.world
ROS_2/src/drone_slam/: CMakeLists.txt  package.xml
ROS_2/src/drone_slam/config/: TUNING.md
ROS_2/src/drone_slam/launch/: rtabmap.launch.py
maps/: README.md  surge_map_poses.txt  surge_town_poses.txt
scripts/: bridge_map.sh  gen_world.py  render_contour.py  render_map.py  save_map.sh
